[package]
name = "jahbo"
version = "0.3.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = "abort"   # Abort on panic
strip = true # Strip symbols from binary

[dependencies]
serde_json = "1.0.85"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
regex = "1.6.0"
itertools = "0.10.3"
cached = "0.38.0"
toml = "0.5.9"
encoding = "0.2.33"
eframe = "0.19.0"
rayon = "1.5.3"
image = "0.24.3"
