[package]
name = "jahbo"
version = "0.3.0"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = "abort"   # Abort on panic
strip = true # Strip symbols from binary

[dependencies]
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
regex = "1.10.4"
itertools = "0.12.1"
cached = "0.50.0"
toml = "0.8.12"
encoding = "0.2.33"
eframe = "0.27.2"
rayon = "1.10.0"
image = "0.25.1"
